...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GKs-u3-Apa">
                                        <rect key="frame" x="116.5" y="522.5" width="87" height="30"/>
                                        <state key="normal" title="Watered  ✔️"/>
                                        <connections>
                                            <action selector="hasBeenWatered:" destination="41G-2i-4cT" eventType="touchUpInside" id="Nyh-qq-7uq"/>
...
                        <viewLayoutGuide key="safeArea" id="8X2-gn-K07"/>
                    </view>
                    <navigationItem key="navigationItem" title="Plant  Details" id="WsG-na-dXz"/>
                    <connections>
                        <outlet property="frequencyLabel" destination="gax-lV-rRe" id="Hh8-L3-SUd"/>
...
                        <viewLayoutGuide key="safeArea" id="fVp-LB-l4D"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add Plant" id="SGR-GC-BBj">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="D8x-dy-Urr">
                            <connections>
...
                                </connections>
                            </barButtonItem>
                            <barButtonItem image="gear" catalog="system" id="MTI-YA-47J">
                                <connections>
                                    <segue destination="lbE-MQ-tZP" kind="presentation" id="Q2L-qa-ss2"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <segments>
                                    <segment title="Web"/>
                                    <segment title="Firebase"/>
                                </segments>
                            </segmentedControl>
...
                                <rect key="frame" x="20" y="138" width="91" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Login VC">
                                    <color key="titleColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                        <segments>
                                            <segment title="Sign Up"/>
                                            <segment title="Sign In"/>
                                        </segments>
                                        <connections>
...
                                        </connections>
                                    </segmentedControl>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5vv-7M-cI5">
                                        <rect key="frame" x="0.0" y="47" width="374" height="34"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WuY-vQ-UIg">
                                        <rect key="frame" x="0.0" y="97" width="374" height="34"/>
                                        <constraints>
...
