...
        // Get plant name from textfield
        let alertController = UIAlertController(title: "Add Plant", message: "Enter the plant name", preferredStyle: .alert)
        alertController.addTextField { textField in
            textField.placeholder = "Name:"
        }
        // Still need to add support for watering interval (hours) from AC
        let submit = UIAlertAction(title: "Done", style: UIAlertAction.Style.default, handler: { _ -> Void in
            let nameInput = alertController.textFields![0] as UITextField
            if nameInput.text != nil {
                // Save it to coredata
                Plant(name: nameInput.text!, identifier: String(), lastWatered: Date(), frequency: Int()) // ?
                do {
                    try CoreDataStack.shared.mainContext.save()
...
                    NotificationCenter.default.post(name: .newPlantAdded, object: self)
                } catch {
                    NSLog("Error saving managed object context: \(error)")
                }
            }
        })
        alertController.addAction(UIAlertAction(title: "Cancel", style: .destructive))
        alertController.addAction(submit)
        self.present(alertController, animated: true, completion: nil)
    }
    
    @objc func updateViews() {
        
...
