...
        frc.delegate = self
        try? frc.performFetch()
        return frc
    }()

    private func configureViews() {
        self.title = "Water My Plants"
        navigationController?.navigationBar.prefersLargeTitles = true
        self.navigationItem.leftBarButtonItem = self.editButtonItem
    }

    override func viewDidLoad() {
        super.viewDidLoad()
...
